fixup pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,15 +62,13 @@ PATH = "/usr/lib/ccache/bin:/tmp/boost:$PATH"
 
 [[tool.cibuildwheel.overrides]]
 before-all = [
-  "bash -c './tools/cibuildwheel/setup_boost.sh $BOOST_VERSION $BOOST_ROOT'",
-  "bash -c 'choco install --no-progress --x86 openssl'" # choco only allows EITHER 32 OR 64-bit version of a package
+  "bash -c './tools/cibuildwheel/setup_boost.sh $BOOST_VERSION $BOOST_ROOT'"
 ]
 select = "*-win32"
 
 [[tool.cibuildwheel.overrides]]
 before-all = [
-  "bash -c './tools/cibuildwheel/setup_boost.sh $BOOST_VERSION $BOOST_ROOT'",
-  "bash -c 'choco install --no-progress openssl'" # choco only allows EITHER 32 OR 64-bit version of a package
+  "bash -c './tools/cibuildwheel/setup_boost.sh $BOOST_VERSION $BOOST_ROOT'"
 ]
 select = "*-win_amd64"
 
